--- a/Back end/src/main/resources/application.properties
+++ b/Back end/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/compartilhagram?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=Admin1234
+spring.datasource.password=admin0329
 spring.jpa.show-sql=true
